--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -4,7 +4,7 @@
     <!-- Basic Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Web UART Interface is an interactive tool for simulating serial communication in your browser, visualizing RX/TX signals in real-time.">
+    <meta name="description" content="(web) UART is an interactive tool for simulating serial communication in your browser, visualizing RX/TX signals in real-time.">
     <meta name="keywords" content="Web UART, serial communication, RX, TX, JavaScript, React, web tool, interactive terminal">
     <meta name="author" content="pindjouf">
     <title>UART simulator</title>
@@ -12,15 +12,15 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://your-image-url.com/image.png"> <!-- Replace with your actual image URL -->
-    <meta property="og:url" content="https://your-domain.com/web-uart"> <!-- Replace with your actual URL -->
+    <meta property="og:image" content="https://your-image-url.com/image.png">
+    <meta property="og:url" content="https://uart.pindjouf.xyz">
     <meta property="og:title" content="Web UART Interface - Interactive Serial Communication">
     <meta property="og:description" content="Web UART Interface is a web-based tool for simulating serial communication, providing real-time visualization of RX/TX signals.">
     <meta property="og:site_name" content="Web UART Interface">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://your-image-url.com/image.png"> <!-- Replace with your actual image URL -->
+    <meta name="twitter:image" content="https://your-image-url.com/image.png">
     <meta name="twitter:site" content="@pindjouf">
     <meta name="twitter:creator" content="@pindjouf">
     <meta name="twitter:title" content="Web UART Interface - Interactive Serial Communication">
